# serializer version: 1
# name: test_NoAutoMerge
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     3 (75.00%)                                                                                                                                                       │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (25.00%)                                                                                                                                                       │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] AutoMerge [0m[31m─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'Allow auto-merge' is set to the expected value.                                                                                                              [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: 'Allow auto-merge' must be set to 'False' (it is currently set to 'True').                                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   1) Visit 'https://github.com/gt-sse-center/RepoAuditor/settings'                                                                                                           [31m│[0m │
  │ [31m│[0m   2) Locate the 'Pull Requests' section                                                                                                                                      [31m│[0m │
  │ [31m│[0m   3) Ensure that 'Allow auto-merge' is unchecked                                                                                                                             [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   The default behavior is to enable the option to auto-merge once all the required status checks associated with a pull request have passed.                                 [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons for this Default                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   ------------------------                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   - Reduces mean resolution time by triggering the merge once all the required status checks pass.                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons to Override this Default                                                                                                                                           [31m│[0m │
  │ [31m│[0m   --------------------------------                                                                                                                                           [31m│[0m │
  │ [31m│[0m   <unknown>                                                                                                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: test_NoDeleteHeadBranches
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     3 (75.00%)                                                                                                                                                       │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (25.00%)                                                                                                                                                       │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] DeleteHeadBranches [0m[31m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'Automatically delete head branches' is set to the expected value.                                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: 'Automatically delete head branches' must be set to 'False' (it is currently set to 'True').                                                                          [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   1) Visit 'https://github.com/gt-sse-center/RepoAuditor/settings'                                                                                                           [31m│[0m │
  │ [31m│[0m   2) Locate the 'Pull Requests' section                                                                                                                                      [31m│[0m │
  │ [31m│[0m   3) Ensure that 'Automatically delete head branches' is unchecked                                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   The default behavior is to automatically delete head branches once they have been merged into the mainline branch.                                                         [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons for this Default                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   ------------------------                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   - Long-lived branches make integration more difficult due to changes that accumulate over time.                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons to Override this Default                                                                                                                                           [31m│[0m │
  │ [31m│[0m   --------------------------------                                                                                                                                           [31m│[0m │
  │ [31m│[0m   - You support release branches and may want to merge changes from this release branch into the mainline branch                                                             [31m│[0m │
  │ [31m│[0m     (although, it is possible to workaround this issue by creating a pull request from a temporary branch that                                                               [31m│[0m │
  │ [31m│[0m     includes cherry-picked changes from the release branch).                                                                                                                 [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: test_NoDependabotSecurityUpdates
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     3 (75.00%)                                                                                                                                                       │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (25.00%)                                                                                                                                                       │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] DependabotSecurityUpdates [0m[31m─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'Dependabot security updates' is set to the expected value.                                                                                                   [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: 'Dependabot security updates' must be set to 'False' (it is currently set to 'True').                                                                                 [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   1) Visit 'https://github.com/gt-sse-center/RepoAuditor/settings/security_analysis'                                                                                         [31m│[0m │
  │ [31m│[0m   2) Locate the 'Dependabot' section                                                                                                                                         [31m│[0m │
  │ [31m│[0m   3) Ensure that 'Dependabot security updates' is unchecked                                                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   The default behavior is to enable Dependabot security updates.                                                                                                             [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons for this Default                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   ------------------------                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   - Increases the overall security of the repository by automatically applying security updates.                                                                             [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons to Override this Default                                                                                                                                           [31m│[0m │
  │ [31m│[0m   --------------------------------                                                                                                                                           [31m│[0m │
  │ [31m│[0m   - Dependabot security updates are not supported for the repository or by the organization.                                                                                 [31m│[0m │
  │ [31m│[0m   - A manual test pass is required before changes can be deployed.                                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: test_NoMergeCommit
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([31;1m-1[0m, <scrubbed duration>)
  DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     3 (75.00%)                                                                                                                                                       │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         1 (25.00%)                                                                                                                                                       │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │ [31m╭─[0m[31m [Error] MergeCommit [0m[31m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[31m─╮[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Validates that 'Allow merge commits' is set to the expected value.                                                                                                           [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m ERROR: 'Allow merge commits' must be set to 'False' (it is currently set to 'True').                                                                                         [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Resolution                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m ----------                                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   1) Visit 'https://github.com/gt-sse-center/RepoAuditor/settings'                                                                                                           [31m│[0m │
  │ [31m│[0m   2) Locate the 'Pull Requests' section                                                                                                                                      [31m│[0m │
  │ [31m│[0m   3) Ensure that 'Allow merge commits' is unchecked                                                                                                                          [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m Rationale                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m ---------                                                                                                                                                                    [31m│[0m │
  │ [31m│[0m   The default behavior is to allow merge commits.                                                                                                                            [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons for this Default                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   ------------------------                                                                                                                                                   [31m│[0m │
  │ [31m│[0m   - Merge commits are the most basic way to merge from a branch into another branch.                                                                                         [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m│[0m   Reasons to Override this Default                                                                                                                                           [31m│[0m │
  │ [31m│[0m   --------------------------------                                                                                                                                           [31m│[0m │
  │ [31m│[0m   <unknown>                                                                                                                                                                  [31m│[0m │
  │ [31m│[0m                                                                                                                                                                              [31m│[0m │
  │ [31m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([31;1m-1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: test_NoPAT
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([33;1m1[0m, <scrubbed duration>)
  DONE! ([33;1m1[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     0 (0.00%)                                                                                                                                                        │
  │ Warnings:       4 (100.00%)                                                                                                                                                      │
  │ Errors:         0 (0.00%)                                                                                                                                                        │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │ [33m╭─[0m[33m [Warning] AutoMerge [0m[33m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[33m─╮[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m Validates that 'Allow auto-merge' is set to the expected value.                                                                                                              [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m WARNING: Incomplete data was encountered; please provide the GitHub PAT.                                                                                                     [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [33m╭─[0m[33m [Warning] DeleteHeadBranches [0m[33m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[33m─╮[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m Validates that 'Automatically delete head branches' is set to the expected value.                                                                                            [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m WARNING: Incomplete data was encountered; please provide the GitHub PAT.                                                                                                     [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [33m╭─[0m[33m [Warning] DependabotSecurityUpdates [0m[33m───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[33m─╮[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m Validates that 'Dependabot security updates' is set to the expected value.                                                                                                   [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m WARNING: Incomplete data was encountered; please provide the GitHub PAT.                                                                                                     [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │ [33m╭─[0m[33m [Warning] MergeCommit [0m[33m─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m[33m─╮[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m Validates that 'Allow merge commits' is set to the expected value.                                                                                                           [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m│[0m WARNING: Incomplete data was encountered; please provide the GitHub PAT.                                                                                                     [33m│[0m │
  │ [33m│[0m                                                                                                                                                                              [33m│[0m │
  │ [33m╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯[0m │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([33;1m1[0m, <scrubbed duration>)
  
  
  '''
# ---
# name: test_Successful
  '''
  Processing 1 module...
    Processing 'GitHub' (1 of 1)...
  
  
  
  
    DONE! ([32;1m0[0m, <scrubbed duration>)
  DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  ╭───────────────────────────────────────────────────────────────────────────────────── GitHub ─────────────────────────────────────────────────────────────────────────────────────╮
  │                                                                                                                                                                                  │
  │ Validates GitHub configuration settings.                                                                                                                                         │
  │                                                                                                                                                                                  │
  │ Successful:     4 (100.00%)                                                                                                                                                      │
  │ Warnings:       0 (0.00%)                                                                                                                                                        │
  │ Errors:         0 (0.00%)                                                                                                                                                        │
  │ Skipped:        0 (0.00%)                                                                                                                                                        │
  │                                                                                                                                                                                  │
  │                                                                                                                                                                                  │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  
  Results: DONE! ([32;1m0[0m, <scrubbed duration>)
  
  
  '''
# ---
